# ephaptic-coupling

./: .gitignore  README.md  ephaptic_ExR7_FB4Y_FB5AB_7.5um_20.0hz.json  ephaptic_per_neuron.json  pyproject.toml  unique_pre_names.txt
FB_Synapse_Dataset/: FB1_incoming_synapses.npz  FB2_incoming_synapses.npz  FB3_incoming_synapses.npz  FB7_incoming_synapses.npz  FB8_incoming_synapses.npz  FB9_incoming_synapses.npz
ephaptic-skills/: SKILL.md
ephaptic-skills/phased-development/: phase1.md  phase2.md  phase3.md  phase4.md  phase4_executionplan.md  phase5.md  phase5_executionplan.md  phase6.md  phase6_executionplan.md
requirements/: animation.md  colors.md  schema.md  utils.md  visualization.md
scripts/: analyze_synaptic_impact.py  animate_ephaptic_field.py  generate_coupling_json.py  generate_per_neuron_ephaptic_json.py  plot_ephaptic_data.py  visualize_ephaptic_overlay.py  visualize_exr7_fb4y.py
src/ephaptic_coupling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ephaptic_coupling/FB_Synapse_Dataset/: analysis.py
src/ephaptic_coupling/visualization/: animation.py  colors.py  utils.py  viewer.py
tests/: p4s5_diag.py  phase1_output.json  phase1_test.py  phase2_manualtest.py  phase2_test.py  phase3_manualtest.py  phase3_test.py  phase4_animation_test.py  phase4s5_manualtest.py  phase4s7_manualtest.py  phase4s9_supplementaltest.py  phase4s9_testbundle.py  phase6_test.py  test_phase5_analysis.py
visualization/: animation.py  colors.py  utils.py  viewer.py
