[project]
name = "ephaptic_coupling"
version = "0.1.0"
description = "Ephaptic coupling visualization and simulation tools"
requires-python = ">=3.10"
dependencies = ["imageio[ffmpeg]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
